--- a/lab/index.html
+++ b/lab/index.html
@@ -53,9 +53,39 @@
         }
       },
     }
-
     /* hook up the store */
     var boundCallback = SelectedValueStore._handleAction.bind(SelectedValueStore)
+    appDispatcher.register(boundCallback)
+
+    var SelectionCountStore = {
+      /* event emitter */
+      _handlers: [],
+      addChangeHandler: function(func) {
+        this._handlers.push(func)
+      },
+      removeChangeHandler: function(func) {
+        var idx = this._handlers.indexOf(func)
+        this._handlers.splice(idx, 1)
+      },
+      emitChange: function() {
+        this._handlers.forEach(function(func){ func() })
+      },
+      /* storage */
+      _value: 0,
+      getValue: function() {
+        return this._value
+      },
+      /* action handler */
+      _handleAction: function(payload) {
+        if (payload.actionType == "VALUE_WAS_SELECTED") {
+          this._value = this._value + 1
+          this.emitChange()
+        }
+      },
+    }
+
+    /* hook up the store */
+    var boundCallback = SelectionCountStore._handleAction.bind(SelectionCountStore)
     appDispatcher.register(boundCallback)
 
     ///
@@ -101,20 +131,47 @@
       },
     })
 
+    var Display = React.createClass({
+      getInitialState: function() {
+        return {
+          selectedValue: SelectedValueStore.getValue(),
+          selectionCount: SelectionCountStore.getValue()
+        }
+      },
+      componentWillMount: function() {
+        SelectedValueStore.addChangeHandler(this._handleValueChanged)
+        SelectionCountStore.addChangeHandler(this._handleValueChanged)
+      },
+      componentWillUnmount: function() {
+        SelectedValueStore.removeChangeHandler(this._handleValueChanged)
+        SelectionCountStore.removeChangeHandler(this._handleValueChanged)
+      },
+      render: function() {
+        return (
+          <div>
+            <h2>Currently: {this.state.selectedValue}</h2>
+            <p>This selection has been made {this.state.selectionCount} times.</p>
+          </div>
+        )
+      },
+      _handleValueChanged: function() {
+        this.setState({
+          selectedValue: SelectedValueStore.getValue(),
+          selectionCount: SelectionCountStore.getValue()
+        })
+      },
+    })
+
     ///
     /// INITIALIZE
     ///
     React.render(<Selector />, document.getElementById('selector'))
+    React.render(<Display />, document.getElementById('display'))
 
     </script>
   </head>
   <body>
     <section id='selector'></section>
-    <section id='display'>
-      <div>
-        <h2>Currently: ??</h2>
-        <p>This selection has been made ?? times.</p>
-      </div>
-    </section>
+    <section id='display'></section>
   </body>
 </html>
